--- a/src/components/Home/styles.scss
+++ b/src/components/Home/styles.scss
@@ -85,6 +85,10 @@
                   gap: 1em;
                   width: 100%;
                 }
+
+                .user-items{
+                    margin-top: 20px;
+                }
             }
           
             .search-bar {
