--- a/src/components/User/styles.scss
+++ b/src/components/User/styles.scss
@@ -1,11 +1,10 @@
 .users{
     width: 80%;
-    background-color: #1D2B53;
-    border-radius: 15px;
     display: flex;
     justify-content: space-between;
     padding: 1%;
-
+    border-radius: 15px;
+    background: #424769;
     .profile{
         width: 20%;
         display: flex;
@@ -18,14 +17,18 @@
 
         a{
             font-size: 1rem;
-
+            color: #fff;
+            text-decoration: none;
+        }
+        a:hover{
+            text-decoration: underline;
         }
     }
 }
 
 .repo{
     height: 100vh;
-    width: 100%;
+    width: 100dvw;
     position: fixed;
     z-index: 3;
     top: 0;
@@ -33,8 +36,27 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: #24292e;
+    backdrop-filter: brightness(70%);
     overflow-y: auto;
+    flex-direction: column;
+
+    .repo-container{
+        width: 50dvw;
+        height: 50dvh;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        background: #24292e;
+        overflow-y: scroll;
+        position: relative;
+        -ms-overflow-style: none;  
+        scrollbar-width: none;  
+        border-radius: 8px;
+        box-shadow: 0 20px 25px -5px rgb(0 0 0 / 0.1), 0 8px 10px -6px rgb(0 0 0 / 0.1);
+        &::-webkit-scrollbar { 
+            display: none;  
+        }
+    }
     p{
         position: absolute;
         right: 10px;
@@ -63,14 +85,6 @@
         cursor: pointer;
         text-decoration: underline;
     }
-}
-
-.repo{
-    -ms-overflow-style: none;  
-    scrollbar-width: none;  
-}
-.repo::-webkit-scrollbar { 
-    display: none;  
 }
 
 .button-3 {
