--- a/src/components/User/styles.scss
+++ b/src/components/User/styles.scss
@@ -50,11 +50,16 @@
         overflow-y: scroll;
         position: relative;
         -ms-overflow-style: none;  
-        scrollbar-width: none;  
         border-radius: 8px;
         box-shadow: 0 20px 25px -5px rgb(0 0 0 / 0.1), 0 8px 10px -6px rgb(0 0 0 / 0.1);
         &::-webkit-scrollbar { 
-            display: none;  
+            width: 0.2rem;
+            padding: 1rem;
+            background-color: white;
+        }
+
+        &::-webkit-scrollbar-thumb {
+            background-color: black;
         }
     }
     p{
@@ -111,28 +116,28 @@
     border-radius: 25px;
 
     &:focus:not(:focus-visible):not(.focus-visible) {
-    box-shadow: none;
-    outline: none;
+        box-shadow: none;
+        outline: none;
     }
 
     &:hover {
-    background-color: #2c974b;
+        background-color: #2c974b;
     }
 
     &:focus {
-    box-shadow: rgba(46, 164, 79, 0.4) 0 0 0 3px;
-    outline: none;
+        box-shadow: rgba(46, 164, 79, 0.4) 0 0 0 3px;
+        outline: none;
     }
 
     &:disabled {
-    background-color: #94d3a2;
-    border-color: rgba(27, 31, 35, 0.1);
-    color: rgba(255, 255, 255, 0.8);
-    cursor: default;
+        background-color: #94d3a2;
+        border-color: rgba(27, 31, 35, 0.1);
+        color: rgba(255, 255, 255, 0.8);
+        cursor: default;
     }
 
     &:active {
-    background-color: #298e46;
-    box-shadow: rgba(20, 70, 32, 0.2) 0 1px 0 inset;
+        background-color: #298e46;
+        box-shadow: rgba(20, 70, 32, 0.2) 0 1px 0 inset;
     }
 }
